Fixes profile size, header alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,20 @@
+h1, h2, h3, h4 {
+    font-family: Merienda, sans-serif;
+    font-weight: 700;
+}
 
+h2, h3, h4 {
+    text-align: center;
+}
+
+#profile-img {
+    max-height: 400px;
+    align-content: center;
+    vertical-align: center;
+}
+
+@media screen and (max-width: 959px) {
+    h1, h2, h3 {
+        text-align: center;
+    }
+}
